--- a/latex/class_airline.tex
+++ b/latex/class_airline.tex
@@ -58,13 +58,13 @@ Complexity\+: O(1)
 
 
 \begin{DoxyParams}{Parameters}
-{\em c} & \+: \doxylink{class_airline}{Airline}\textquotesingle{}s code. \\
+{\em c} & \+: \doxylink{class_airline}{Airline}\textquotesingle{}s code \\
 \hline
-{\em n} & \+: \doxylink{class_airline}{Airline}\textquotesingle{}s name. \\
+{\em n} & \+: \doxylink{class_airline}{Airline}\textquotesingle{}s name \\
 \hline
-{\em cs} & \+: \doxylink{class_airline}{Airline}\textquotesingle{}s callsign. \\
+{\em cs} & \+: \doxylink{class_airline}{Airline}\textquotesingle{}s callsign \\
 \hline
-{\em co} & \+: \doxylink{class_airline}{Airline}\textquotesingle{}s country. \\
+{\em co} & \+: \doxylink{class_airline}{Airline}\textquotesingle{}s country \\
 \hline
 \end{DoxyParams}
 
@@ -83,7 +83,7 @@ Get callsign of the \doxylink{class_airline}{Airline}.
 Complexity\+: O(1)
 
 \begin{DoxyReturn}{Returns}
-Returns the value of the \doxylink{class_airline}{Airline}\textquotesingle{}s callsign. 
+Returns the value of the \doxylink{class_airline}{Airline}\textquotesingle{}s callsign 
 \end{DoxyReturn}
 \Hypertarget{class_airline_a41ef613d6b390c463821b9ae43d9ec84}\label{class_airline_a41ef613d6b390c463821b9ae43d9ec84} 
 \index{Airline@{Airline}!getCode@{getCode}}
@@ -98,7 +98,7 @@ Get code of the \doxylink{class_airline}{Airline}.
 Complexity\+: O(1)
 
 \begin{DoxyReturn}{Returns}
-Returns the value of the \doxylink{class_airline}{Airline}\textquotesingle{}s code. 
+Returns the value of the \doxylink{class_airline}{Airline}\textquotesingle{}s code 
 \end{DoxyReturn}
 \Hypertarget{class_airline_a265c119d09effb03f8c7b3107f8d49dd}\label{class_airline_a265c119d09effb03f8c7b3107f8d49dd} 
 \index{Airline@{Airline}!getCountry@{getCountry}}
@@ -113,7 +113,7 @@ Get country of the \doxylink{class_airline}{Airline}.
 Complexity\+: O(1)
 
 \begin{DoxyReturn}{Returns}
-Returns the value of the \doxylink{class_airline}{Airline}\textquotesingle{}s country. 
+Returns the value of the \doxylink{class_airline}{Airline}\textquotesingle{}s country 
 \end{DoxyReturn}
 \Hypertarget{class_airline_a24f8b8e17d2d10af233b12671673bcd8}\label{class_airline_a24f8b8e17d2d10af233b12671673bcd8} 
 \index{Airline@{Airline}!getName@{getName}}
@@ -128,7 +128,7 @@ Get name of the \doxylink{class_airline}{Airline}.
 Complexity\+: O(1)
 
 \begin{DoxyReturn}{Returns}
-Returns the value of the \doxylink{class_airline}{Airline}\textquotesingle{}s name. 
+Returns the value of the \doxylink{class_airline}{Airline}\textquotesingle{}s name 
 \end{DoxyReturn}
 \Hypertarget{class_airline_ad316e77d2a6222ce649a000325713cef}\label{class_airline_ad316e77d2a6222ce649a000325713cef} 
 \index{Airline@{Airline}!operator$<$@{operator$<$}}
@@ -144,11 +144,11 @@ Complexity\+: O(1)
 
 
 \begin{DoxyParams}{Parameters}
-{\em other} & \+: The \doxylink{class_airline}{Airline} object to compare against. \\
+{\em other} & \+: The \doxylink{class_airline}{Airline} object to compare against \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-True if this \doxylink{class_airline}{Airline} is less than the other, false otherwise. 
+True if this \doxylink{class_airline}{Airline} is less than the other, false otherwise 
 \end{DoxyReturn}
 \Hypertarget{class_airline_aab550db1265c3df4f66b90c2dea5f6cc}\label{class_airline_aab550db1265c3df4f66b90c2dea5f6cc} 
 \index{Airline@{Airline}!operator==@{operator==}}
@@ -164,13 +164,13 @@ Complexity\+: O(1)
 
 
 \begin{DoxyParams}{Parameters}
-{\em a} & \+: The first \doxylink{class_airline}{Airline} object. \\
+{\em a} & \+: The first \doxylink{class_airline}{Airline} object \\
 \hline
-{\em b} & \+: The second \doxylink{class_airline}{Airline} object. \\
+{\em b} & \+: The second \doxylink{class_airline}{Airline} object \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-True if the \doxylink{class_airline}{Airline} objects are equal, false otherwise. 
+True if the \doxylink{class_airline}{Airline} objects are equal, false otherwise 
 \end{DoxyReturn}
 
 
