--- a/latex/class_airport.tex
+++ b/latex/class_airport.tex
@@ -64,17 +64,17 @@ Complexity\+: O(1)
 
 
 \begin{DoxyParams}{Parameters}
-{\em c} & \+: \doxylink{class_airport}{Airport}\textquotesingle{}s code. \\
+{\em c} & \+: \doxylink{class_airport}{Airport}\textquotesingle{}s code \\
 \hline
-{\em n} & \+: \doxylink{class_airport}{Airport}\textquotesingle{}s name. \\
+{\em n} & \+: \doxylink{class_airport}{Airport}\textquotesingle{}s name \\
 \hline
-{\em ci} & \+: \doxylink{class_airport}{Airport}\textquotesingle{}s city. \\
+{\em ci} & \+: \doxylink{class_airport}{Airport}\textquotesingle{}s city \\
 \hline
-{\em co} & \+: \doxylink{class_airport}{Airport}\textquotesingle{}s country. \\
+{\em co} & \+: \doxylink{class_airport}{Airport}\textquotesingle{}s country \\
 \hline
-{\em la} & \+: \doxylink{class_airport}{Airport}\textquotesingle{}s latitude. \\
+{\em la} & \+: \doxylink{class_airport}{Airport}\textquotesingle{}s latitude \\
 \hline
-{\em lo} & \+: \doxylink{class_airport}{Airport}\textquotesingle{}s longitude. \\
+{\em lo} & \+: \doxylink{class_airport}{Airport}\textquotesingle{}s longitude \\
 \hline
 \end{DoxyParams}
 
@@ -93,7 +93,7 @@ Get city of the \doxylink{class_airport}{Airport}.
 Complexity\+: O(1)
 
 \begin{DoxyReturn}{Returns}
-Returns the value of the \doxylink{class_airport}{Airport}\textquotesingle{}s city. 
+Returns the value of the \doxylink{class_airport}{Airport}\textquotesingle{}s city 
 \end{DoxyReturn}
 \Hypertarget{class_airport_ad1369e1d47c87e205f1718b853a66d54}\label{class_airport_ad1369e1d47c87e205f1718b853a66d54} 
 \index{Airport@{Airport}!getCode@{getCode}}
@@ -108,7 +108,7 @@ Get code of the \doxylink{class_airport}{Airport}.
 Complexity\+: O(1)
 
 \begin{DoxyReturn}{Returns}
-Returns the value of the \doxylink{class_airport}{Airport}\textquotesingle{}s code. 
+Returns the value of the \doxylink{class_airport}{Airport}\textquotesingle{}s code 
 \end{DoxyReturn}
 \Hypertarget{class_airport_a82e555b62c9af6c729a6d3c7fb8ae8c4}\label{class_airport_a82e555b62c9af6c729a6d3c7fb8ae8c4} 
 \index{Airport@{Airport}!getCountry@{getCountry}}
@@ -123,7 +123,7 @@ Get country of the \doxylink{class_airport}{Airport}.
 Complexity\+: O(1)
 
 \begin{DoxyReturn}{Returns}
-Returns the value of the \doxylink{class_airport}{Airport}\textquotesingle{}s country. 
+Returns the value of the \doxylink{class_airport}{Airport}\textquotesingle{}s country 
 \end{DoxyReturn}
 \Hypertarget{class_airport_afcff199f6f786aa4ee3c15cb2f195487}\label{class_airport_afcff199f6f786aa4ee3c15cb2f195487} 
 \index{Airport@{Airport}!getLatitude@{getLatitude}}
@@ -138,7 +138,7 @@ Get latitude of the \doxylink{class_airport}{Airport}.
 Complexity\+: O(1)
 
 \begin{DoxyReturn}{Returns}
-Returns the value of the \doxylink{class_airport}{Airport}\textquotesingle{}s latitude. 
+Returns the value of the \doxylink{class_airport}{Airport}\textquotesingle{}s latitude 
 \end{DoxyReturn}
 \Hypertarget{class_airport_a5d31cceec2a7de9fb902afeda997c3ff}\label{class_airport_a5d31cceec2a7de9fb902afeda997c3ff} 
 \index{Airport@{Airport}!getLongitude@{getLongitude}}
@@ -153,7 +153,7 @@ Get longitude of the \doxylink{class_airport}{Airport}.
 Complexity\+: O(1)
 
 \begin{DoxyReturn}{Returns}
-Returns the value of the \doxylink{class_airport}{Airport}\textquotesingle{}s longitude. 
+Returns the value of the \doxylink{class_airport}{Airport}\textquotesingle{}s longitude 
 \end{DoxyReturn}
 \Hypertarget{class_airport_a939b886a8a9675e22418f2c9a490bdcb}\label{class_airport_a939b886a8a9675e22418f2c9a490bdcb} 
 \index{Airport@{Airport}!getName@{getName}}
@@ -168,7 +168,7 @@ Get name of the \doxylink{class_airport}{Airport}.
 Complexity\+: O(1)
 
 \begin{DoxyReturn}{Returns}
-Returns the value of the \doxylink{class_airport}{Airport}\textquotesingle{}s name. 
+Returns the value of the \doxylink{class_airport}{Airport}\textquotesingle{}s name 
 \end{DoxyReturn}
 \Hypertarget{class_airport_a813cafc860e9b049b03009d4a9cd4673}\label{class_airport_a813cafc860e9b049b03009d4a9cd4673} 
 \index{Airport@{Airport}!operator"!=@{operator"!=}}
@@ -184,11 +184,11 @@ Complexity\+: O(1)
 
 
 \begin{DoxyParams}{Parameters}
-{\em other} & \+: The other airport to compare with. \\
+{\em other} & \+: The other airport to compare with \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-True if the airports are not equal, false otherwise. 
+True if the airports are not equal, false otherwise 
 \end{DoxyReturn}
 \Hypertarget{class_airport_ae71c63c0931bd5eed9120344ff32edf6}\label{class_airport_ae71c63c0931bd5eed9120344ff32edf6} 
 \index{Airport@{Airport}!operator$<$@{operator$<$}}
@@ -204,11 +204,11 @@ Complexity\+: O(1)
 
 
 \begin{DoxyParams}{Parameters}
-{\em other} & \+: The \doxylink{class_airport}{Airport} object to compare against. \\
+{\em other} & \+: The \doxylink{class_airport}{Airport} object to compare against \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-True if this \doxylink{class_airport}{Airport} is considered less than the other, false otherwise. 
+True if this \doxylink{class_airport}{Airport} is considered less than the other, false otherwise 
 \end{DoxyReturn}
 \Hypertarget{class_airport_a2d93e2cadbdb3ed9114aff48aa0bac5c}\label{class_airport_a2d93e2cadbdb3ed9114aff48aa0bac5c} 
 \index{Airport@{Airport}!operator==@{operator==}}
@@ -224,11 +224,11 @@ Complexity\+: O(1)
 
 
 \begin{DoxyParams}{Parameters}
-{\em other} & \+: The other airport to compare with. \\
+{\em other} & \+: The other airport to compare with \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-True if the airports are equal, false otherwise. 
+True if the airports are equal, false otherwise 
 \end{DoxyReturn}
 
 
