--- a/latex/class_edge.tex
+++ b/latex/class_edge.tex
@@ -47,9 +47,9 @@ Complexity\+: 0(1)
 
 
 \begin{DoxyParams}{Parameters}
-{\em d} & \+: Destination vertex. \\
+{\em d} & \+: Destination vertex \\
 \hline
-{\em airline\+\_\+} & \+: \doxylink{class_airline}{Airline} associated with the edge. \\
+{\em airline\+\_\+} & \+: \doxylink{class_airline}{Airline} associated with the edge \\
 \hline
 \end{DoxyParams}
 
