--- a/latex/class_vertex.tex
+++ b/latex/class_vertex.tex
@@ -60,7 +60,7 @@ Complexity\+: O(1)
 
 
 \begin{DoxyParams}{Parameters}
-{\em in} & \doxylink{class_airport}{Airport} object to be associated with the vertex. \\
+{\em in} & \doxylink{class_airport}{Airport} object to be associated with the vertex \\
 \hline
 \end{DoxyParams}
 
@@ -127,7 +127,7 @@ Number
 Checks if an vertex is processing -\/ auxiliary field. 
 
 \begin{DoxyReturn}{Returns}
-True of false 
+True if it\textquotesingle{}s processing, false if not 
 \end{DoxyReturn}
 \Hypertarget{class_vertex_aa4bd82105b85ee53a917391f4811cd8a}\label{class_vertex_aa4bd82105b85ee53a917391f4811cd8a} 
 \index{Vertex@{Vertex}!isVisited@{isVisited}}
@@ -140,7 +140,7 @@ True of false
 Checks if an vertex was visited -\/ auxiliary field. 
 
 \begin{DoxyReturn}{Returns}
-True of false 
+True if is visited, false if not 
 \end{DoxyReturn}
 \Hypertarget{class_vertex_a390911b126aee6bcf85a4b2e9921a421}\label{class_vertex_a390911b126aee6bcf85a4b2e9921a421} 
 \index{Vertex@{Vertex}!setLow@{setLow}}
@@ -199,7 +199,7 @@ Sets the visited to true or false -\/ auxiliary field.
 
 
 \begin{DoxyParams}{Parameters}
-{\em v} & \+: True or False \\
+{\em v} & \+: True or false \\
 \hline
 \end{DoxyParams}
 
