--- a/latex/main_8cpp.tex
+++ b/latex/main_8cpp.tex
@@ -84,7 +84,7 @@ int {\bfseries num\+Air}
 
 Menu to get information about an airline. 
 
-Complexity\+: O(n) \Hypertarget{main_8cpp_a87934f5922bb1dc98fc9575959201c6d}\label{main_8cpp_a87934f5922bb1dc98fc9575959201c6d} 
+Complexity\+: O(n\texorpdfstring{$^\wedge$}{\string^}5) \Hypertarget{main_8cpp_a87934f5922bb1dc98fc9575959201c6d}\label{main_8cpp_a87934f5922bb1dc98fc9575959201c6d} 
 \index{main.cpp@{main.cpp}!airportMenu@{airportMenu}}
 \index{airportMenu@{airportMenu}!main.cpp@{main.cpp}}
 \doxysubsubsection{\texorpdfstring{airportMenu()}{airportMenu()}}
@@ -94,7 +94,7 @@ Complexity\+: O(n) \Hypertarget{main_8cpp_a87934f5922bb1dc98fc9575959201c6d}\lab
 
 Menu to get information about an airport. 
 
-Complexity\+: O(n) \Hypertarget{main_8cpp_a23bed87e0ae9a2d50b2a590640410761}\label{main_8cpp_a23bed87e0ae9a2d50b2a590640410761} 
+Complexity\+: O(n\texorpdfstring{$^\wedge$}{\string^}2) \Hypertarget{main_8cpp_a23bed87e0ae9a2d50b2a590640410761}\label{main_8cpp_a23bed87e0ae9a2d50b2a590640410761} 
 \index{main.cpp@{main.cpp}!checkDigit@{checkDigit}}
 \index{checkDigit@{checkDigit}!main.cpp@{main.cpp}}
 \doxysubsubsection{\texorpdfstring{checkDigit()}{checkDigit()}}
@@ -144,7 +144,7 @@ Complexity\+: O(n) \Hypertarget{main_8cpp_ace5c832760ee794deabb7e45f9897200}\lab
 
 Menu to get information about an city. 
 
-Complexity\+: O(n) \Hypertarget{main_8cpp_a82aa826432a4be05cdb2dc19cc6fcb62}\label{main_8cpp_a82aa826432a4be05cdb2dc19cc6fcb62} 
+Complexity\+: O(n\texorpdfstring{$^\wedge$}{\string^}4) \Hypertarget{main_8cpp_a82aa826432a4be05cdb2dc19cc6fcb62}\label{main_8cpp_a82aa826432a4be05cdb2dc19cc6fcb62} 
 \index{main.cpp@{main.cpp}!clearMenus@{clearMenus}}
 \index{clearMenus@{clearMenus}!main.cpp@{main.cpp}}
 \doxysubsubsection{\texorpdfstring{clearMenus()}{clearMenus()}}
@@ -164,7 +164,7 @@ Complexity\+: O(n) \Hypertarget{main_8cpp_a113614567f2aa58b0e195879869dab1f}\lab
 
 Menu to get information about a country. 
 
-Complexity\+: O(n\texorpdfstring{$^\wedge$}{\string^}2) \Hypertarget{main_8cpp_aa1b116f3b21671bb9e3991d02ffe4be8}\label{main_8cpp_aa1b116f3b21671bb9e3991d02ffe4be8} 
+Complexity\+: O(n\texorpdfstring{$^\wedge$}{\string^}5) \Hypertarget{main_8cpp_aa1b116f3b21671bb9e3991d02ffe4be8}\label{main_8cpp_aa1b116f3b21671bb9e3991d02ffe4be8} 
 \index{main.cpp@{main.cpp}!destX@{destX}}
 \index{destX@{destX}!main.cpp@{main.cpp}}
 \doxysubsubsection{\texorpdfstring{destX()}{destX()}}
@@ -174,7 +174,7 @@ Complexity\+: O(n\texorpdfstring{$^\wedge$}{\string^}2) \Hypertarget{main_8cpp_a
 
 Gets the number of maximum of stops the user chooses. 
 
-Complexity\+: O(n) \Hypertarget{main_8cpp_a81ee7b6488b9ab84ff542aecf73f900f}\label{main_8cpp_a81ee7b6488b9ab84ff542aecf73f900f} 
+Complexity\+: O(n+(v\texorpdfstring{$\ast$}{*}(v+e))), being v the number of vertices in a graph and e the number of edges \Hypertarget{main_8cpp_a81ee7b6488b9ab84ff542aecf73f900f}\label{main_8cpp_a81ee7b6488b9ab84ff542aecf73f900f} 
 \index{main.cpp@{main.cpp}!filters@{filters}}
 \index{filters@{filters}!main.cpp@{main.cpp}}
 \doxysubsubsection{\texorpdfstring{filters()}{filters()}}
@@ -199,7 +199,7 @@ An int depending on the menu the user chooses
 
 Menu to get information about a flight. 
 
-Complexity\+: O(n\texorpdfstring{$^\wedge$}{\string^}3) \Hypertarget{main_8cpp_af4e15fcbb1321ba603ae2cecd6cd1c52}\label{main_8cpp_af4e15fcbb1321ba603ae2cecd6cd1c52} 
+Complexity\+: O(n\texorpdfstring{$^\wedge$}{\string^}8\texorpdfstring{$\ast$}{*}log(n)) \Hypertarget{main_8cpp_af4e15fcbb1321ba603ae2cecd6cd1c52}\label{main_8cpp_af4e15fcbb1321ba603ae2cecd6cd1c52} 
 \index{main.cpp@{main.cpp}!getInfoMenu@{getInfoMenu}}
 \index{getInfoMenu@{getInfoMenu}!main.cpp@{main.cpp}}
 \doxysubsubsection{\texorpdfstring{getInfoMenu()}{getInfoMenu()}}
@@ -219,7 +219,7 @@ Complexity\+: O(n) \Hypertarget{main_8cpp_aae87e5c793faf84dd799a2264a1dc04f}\lab
 
 Menu to get global information. 
 
-Complexity\+: O(n\texorpdfstring{$^\wedge$}{\string^}2) \Hypertarget{main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4}\label{main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4} 
+Complexity\+: O(n\texorpdfstring{$^\wedge$}{\string^}4) \Hypertarget{main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4}\label{main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4} 
 \index{main.cpp@{main.cpp}!main@{main}}
 \index{main@{main}!main.cpp@{main.cpp}}
 \doxysubsubsection{\texorpdfstring{main()}{main()}}
@@ -229,7 +229,7 @@ Complexity\+: O(n\texorpdfstring{$^\wedge$}{\string^}2) \Hypertarget{main_8cpp_a
 
 Main function to initialize data and run the program. 
 
-Complexity\+: O(n)
+Complexity\+: O(n\texorpdfstring{$^\wedge$}{\string^}9\texorpdfstring{$\ast$}{*}log(n))
 
 \begin{DoxyReturn}{Returns}
 Program exit status. 
@@ -353,7 +353,7 @@ True or False
 
 Checks if the country exists in the countries set. 
 
-Complexity\+: O(1)
+Complexity\+: O(log(n))
 
 
 \begin{DoxyParams}{Parameters}
@@ -379,3 +379,4 @@ True or False
 \DoxyCodeLine{\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \{\textcolor{stringliteral}{"{}globalInfo"{}},\ 7\},\ \{\textcolor{stringliteral}{"{}destX"{}},\ 8\}\}}
 
 \end{DoxyCode}
+Global variable 
