--- a/latex/index.tex
+++ b/latex/index.tex
@@ -3,8 +3,8 @@
 \hypertarget{index_intro_sec}{}\doxysection{\texorpdfstring{Introduction}{Introduction}}\label{index_intro_sec}
 This project was made in the context of the Algorithms and Data Structures class.
 
-The aim of this project is is precisely to develop a flight management system for the air travel network of the airlines around the world that provides effective assistance to users who wish to explore and plan travel.
+The aim of this project is precisely to develop a flight management system for the air travel network of the airlines around the world that provides effective assistance to users who wish to explore and plan travel.
 
 The system must include various functionalities such as searching information about an airport, an airline, a city, a country or general information. The system also allows the user to search the best flight option between two airports, cities or coordinates with or without using a filter.
 
-This project was made by\+: Filipa Geraldes, Filipa Fidalgo and Leonor Couto. 
+This project was made by\+: Filipa Geraldes (up202208030), Filipa Fidalgo (up202208039) and Leonor Couto (up202205796). 
